Tests/stella-implementation-in-swiftTests/Resources/development/ill-typed/missing-main.stella
language core;

fn pupa(x : Nat) -> Nat {
    return succ(0)
}
